--- a/index.html
+++ b/index.html
@@ -5,6 +5,16 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
 	<title>MCS Time Simulator (MingChaoSans Fight)</title>
 	<meta name="description" content="This is MingChaoSans-fight!." />
+	<p>mingchaosans</p>
+<p>选择难度
+
+<ul>
+  <li> <a href="https://mcs-time.github.io/mingchaosans-RFF-V1.55/">V1.55</a> </li>
+  <li> <a href="https://mcs-time.github.io/mingchaosans-RFF-V1.4/">V1.4</a> </li>
+  <li> <a href="https://mcs-time.github.io/mingchaosans-RFF-V.3/">V1.3</a> </li>
+  <li> <a href="https://mcs-time.github.io/mingchaosans-RFF-V1.2/">V1.2</a> </li>
+  <li> <a href="https://mcs-time.github.io/mingchaosans-RFF-V1.1/">V1.1</a> </li>
+</ul>
 	
 	<!-- Standardised web app manifest -->
 	<link rel="manifest" href="appmanifest.json" />
