--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	<title>MCS Time Simulator (MingChaoSans Fight)</title>
 	<meta name="description" content="This is MingChaoSans-fight!." />
 	<p>mingchaosans-fight</p>
-<p>选择难度
+<p>选择版本
 
 <ul>
   <li> <a href="https://mcs-time.github.io/mingchaosans-RFF-V1.55/">V1.55</a> </li>
