--- a/index.html
+++ b/index.html
@@ -14,6 +14,9 @@
   <li> <a href="https://mcs-time.github.io/mingchaosans-RFF-V.3/">V1.3</a> </li>
   <li> <a href="https://mcs-time.github.io/mingchaosans-RFF-V1.2/">V1.2</a> </li>
   <li> <a href="https://mcs-time.github.io/mingchaosans-RFF-V1.1/">V1.1</a> </li>
+<p>选择难度
+  <li> <a href="https://mcs-time.github.io/mingchaosans-RFF-V1.55/">中等</a> </li>
+  <li> <a href="https://mcs-time.github.io/-/">简单</a> </li>	
 </ul>
 </body> 
 </html> 
