--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <li> <a href="https://mcs-time.github.io/mingchaosans-RFF-V1.1/">V1.1</a> </li>
 <p>选择难度
   <li> <a href="https://mcs-time.github.io/mingchaosans-RFF-V1.55/">中等</a> </li>
-  <li> <a href="https://mcs-time.github.io/-/">简单</a> </li>	
+  <li> <a href="https://jcw87.github.io/c2-sans-fight">简单</a> </li>	
 </ul>
 </body> 
 </html> 
